feat: implement speaker search functionality

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <h1>Tech Event Schedule</h1>
     <div class="search-container">
       <input type="text" id="category-search" placeholder="Search by category...">
+      <input type="text" id="speaker-search" placeholder="Search by speaker...">
     </div>
   </header>
 
