feat: Add theme switcher and improve visual design

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       <input type="text" id="category-search" placeholder="Search by category...">
       <input type="text" id="speaker-search" placeholder="Search by speaker...">
     </div>
+    <button id="theme-switcher">Toggle Theme</button>
   </header>
 
   <main id="schedule-container">
